# szl-lambda-gate

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  build.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
hf-kernels/szl-governed-norm/: README.md  contract.json
tests/: governed_norm_test_correctness.py  governed_norm_test_norm.py  governed_norm_test_receipts.py  lambda_aggregator_source.py  test_hf_governed_norm_contract.py  test_lambda.py
torch-ext/szl_lambda_gate/: __init__.py  _lambda.py  _ops.py  layers.py
torch-ext/szl_lambda_gate/governed_norm/: __init__.py  _norm.py  _receipt.py  layers.py
